fixed z-index

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -17,6 +17,7 @@
   display: flex;
   overflow: hidden;
   justify-content: space-between;
+  z-index: 1;
 }
 .about__title {
   max-width: 251px;
@@ -30,7 +31,6 @@
 .about__content {
   max-width: 660px;
   padding: 119px 0 173px;
-  z-index: 1;
   font-family: "Noto Serif", "New Times Roman", serif;
   font-size: 20px;
   line-height: 30px;
@@ -48,6 +48,7 @@
   left: -129px;
   opacity: 1;
   animation: pulsate 1.3s ease-in-out infinite;
+  z-index: -1;
 }
 .about__circle_animation_blurred {
   animation: pulsate 1.3s ease-in-out infinite;
